# wmap

./: .gitignore  CMakeLists.txt  package.xml
launch/: amcl.launch  move_base.launch  move_base_3d.launch  wmap.launch  wmap2.launch  wmap4.launch  wmap_amcl.launch
move_base_config/: costmap_common_params.yaml  dwa_planner_ros.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation_stage/move_base_config/: costmap_common_params.yaml  global_costmap_params.yaml  move_base.xml  wmap_amcl_node.xml  wmap_local_costmap_params.yaml  wmap_move_base.xml
src/: wmap.cpp  wmap.h
